--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
       <a href="https://www.linkedin.com/in/jardel-antunes-ab9b7b180/"  target="_blank">
         <li>
 
-          <img src="./assets/icons/LinkedinLogo.svg" alt=""
-          class="hover-1">
+          <img src="./assets/icons/LinkedinLogo.svg" alt="">
           <p>Linkedin </p>
           <img src="./assets/icons/ArrowUpRight.svg" alt=""
           class="seta">
@@ -172,8 +171,7 @@
 
       <a href="https://www.instagram.com/jardel_nero/" rel="" target="_blank">
         <li>
-          <img src="./assets/icons/InstagramLogo.svg" alt=""
-          class="hover-2">
+          <img src="./assets/icons/InstagramLogo.svg" alt="">
           <p>Instagram</p>
           <img src="./assets/icons/ArrowUpRight.svg" alt=""
           class="seta">
@@ -182,8 +180,7 @@
       
       <a href="https://github.com/jardelqw" rel="" target="_blank">
         <li>
-          <img src="./assets/icons/GithubLogo.svg" alt=""
-          class="hover-3">
+          <img src="./assets/icons/GithubLogo.svg" alt="">
           <p>GitHub</p>
           <img src="./assets/icons/ArrowUpRight.svg" alt=""
           class="seta">
@@ -192,8 +189,7 @@
 
       <a href="#" rel="" target="_blank">
         <li>
-          <img src="./assets/icons/EnvelopeSimple.svg" alt=""
-          class="hover-4">
+          <img src="./assets/icons/EnvelopeSimple.svg" alt="">
           <p>E-mail</p>
           <img src="./assets/icons/ArrowUpRight.svg" alt=""
           class="seta">
